--- a/samplewebapp/Views/Home/Index.cshtml
+++ b/samplewebapp/Views/Home/Index.cshtml
@@ -10,5 +10,6 @@
 
 <div class="text-center">
     <h2>Actual version: 1.30</h2>
+    <h2>Working application platform !!</h2>
     <h3>Current server time: @DateTime.UtcNow</h3>
 </div>
