--- a/samplewebapp/Views/Home/Index.cshtml
+++ b/samplewebapp/Views/Home/Index.cshtml
@@ -12,5 +12,6 @@
     <h2>Actual version: 1.40</h2>
     <h2>Working application platform !!</h2>
     <h2>Lorem ipsum</h2>
+    <h2>Lorem ipsum2</h2>
     <h3>Current server time: @DateTime.UtcNow</h3>
 </div>
