--- a/samplewebapp/Views/Home/Index.cshtml
+++ b/samplewebapp/Views/Home/Index.cshtml
@@ -13,5 +13,6 @@
     <h2>Working application platform !!</h2>
     <h2>Lorem ipsum</h2>
     <h2>Lorem ipsum2</h2>
+     <h2>Lorem ipsum3</h2>
     <h3>Current server time: @DateTime.UtcNow</h3>
 </div>
