--- a/samplewebapp/Views/Home/Index.cshtml
+++ b/samplewebapp/Views/Home/Index.cshtml
@@ -14,5 +14,6 @@
     <h2>Lorem ipsum</h2>
     <h2>Lorem ipsum2</h2>
     <h2>Lorem ipsum3</h2>
+    <h2>Andris egy buzi</h2>
     <h3>Current server time: @DateTime.UtcNow</h3>
 </div>
